Implementation of unlike feature + bug fixes + further improvements
