# application/swagger/swagger.yaml
@@ -102,6 +102,34 @@ paths:
         405:
           description: "Invalid input"
       x-swagger-router-controller: "application.controllers.recommendation_controller"
+  /prioritizer/unlike:
+    post:
+      tags:
+      - "Recommender"
+      summary: "Unlike a requirement."
+      description: ""
+      operationId: "unlike_prioritized_issue"
+      consumes:
+      - "application/json"
+      - "application/xml"
+      produces:
+      - "application/json"
+      - "application/xml"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Request object"
+        required: true
+        schema:
+          $ref: "#/definitions/LikeRequirementRequest"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/LikeRequirementResponse"
+        405:
+          description: "Invalid input"
+      x-swagger-router-controller: "application.controllers.recommendation_controller"
   /prioritizer/dislike:
     post:
       tags:
